2007-10-08  Tim-Philipp Müller  <tim at centricular dot net>

	* win32/common/gstenumtypes.c:
	* win32/common/gstenumtypes.h:
	* win32/common/gstversion.h:
	  Update generated files.

2007-10-08  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/manual/advanced-autoplugging.xml:
	  Prefix section with broken code with a warning (see #342432).

2007-10-08  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/manual/appendix-integration.xml:
	* docs/manual/basics-init.xml:
	  Call g_thread_init() before g_option_context_new() to
	  avoid warnings. Spotted by Ritesh Khadgaray. Fixes #484225.

2007-10-08  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_preroll_queue_flush),
	(gst_base_sink_queue_object_unlocked),
	(gst_base_sink_queue_object), (gst_base_sink_event),
	(gst_base_sink_needs_preroll), (gst_base_sink_chain_unlocked):
	When we received EOS and are waiting for when to post the EOS message,
	our state is prerolled and we should not return ASYNC.
	Reorganize some code paths to implement this behavior.

	* tests/check/generic/sinks.c: (send_eos), (GST_START_TEST),
	(gst_sinks_suite):
	Add unit test to verify above EOS fix.

2007-10-08  Wim Taymans  <wim.taymans@gmail.com>

	* plugins/elements/gsttypefindelement.c:
	(gst_type_find_element_have_type), (gst_type_find_element_init),
	(gst_type_find_element_setcaps), (gst_type_find_element_chain):
	Move detecting the input caps of the sinkpad to the setcaps function.
	This allows us to update the output caps when we receive new input caps
	instead of always using the first detected caps.

2007-10-08  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_event),
	(gst_base_sink_get_position):
	Don't try to preroll non-async elements after a flush.
	Subtract latency form clock times when reporting position.

2007-10-05  Wim Taymans  <wim.taymans@gmail.com>

	* gst/gstpad.c: (gst_pad_pause_task):
	* gst/gstutils.c: